add qrcode endpoints
