# app/static/swagger.json
@@ -242,7 +242,7 @@
 				}
 			}
 		},
-		"/api/qr/generate": {
+		"/api/qrcodes": {
 			"post": {
 				"tags": ["Base"],
 				"summary": "Endpoint Generate QR codes",
@@ -253,13 +253,53 @@
 						"schema": {
 							"type": "object",
 							"properties": {
-								"email": { "type": "string" },
-								"username": { "type": "string" },
-								"password": { "type": "string" },
-								"firstname": { "type": "string" },
-								"lastname": { "type": "string" }
+								"type":    { "type": "string", "enum": ["menu","card","payment","custom"] },
+								"payload": { "type": "string" }
+							},
+							"required": ["type","payload"]
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Status of the qr code generation",
+						"schema": {
+							"type": "object",
+							"properties": {
+								"message": { "type": "string" },
+								"status": {
+									"type": "string",
+									"enum": ["success", "failed"],
+									"example": "success"
+								},
+								"status_code": {
+									"type": "integer",
+									"enum": [200, 400, 409],
+									"example": 200
+								},
+								"data": {
+									"type": "object",
+									"properties": {
+										"qrcode": {"type": "object"}
+									}
+								}
 							}
 						}
+					}
+				}
+			}
+		},
+		"/api/qrcodes/{qrcode_id}": {
+			"get": {
+				"tags": ["Base"],
+				"summary": "Endpoint To get specific qrcodes",
+				"parameters": [
+					{
+						"name": "qrcode_id",
+						"in": "path",
+						"description": "unique ID of a qrcode",
+						"required": true,
+						"type": "string"
 					}
 				],
 				"responses": {
@@ -283,12 +323,10 @@
 						}
 					}
 				}
-			}
-		},
-		"/api/qr/host": {
-			"post": {
+			},
+			"delete": {
 				"tags": ["Base"],
-				"summary": "Endpoint Host QR codes",
+				"summary": "Endpoint Delete Specific QR codes",
 				"parameters": [
 					{
 						"name": "body",
